fix: remove horizontal scroll

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -122,7 +122,7 @@
   background-color: var(--section-color-two);
 }
 .about_wrapper {
-  width: 1280px;
+  width: 1200px;
   margin: 0 auto;
   display: flex;
 }
@@ -167,7 +167,7 @@
   background-color: var(--section-color-three);
 }
 .pets_wrapper {
-  width: 1280px;
+  width: 1200px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -184,6 +184,7 @@
   margin-bottom: 60px;
 }
 .pets.slider {
+  width: 1200px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -291,7 +292,7 @@
   background-color: var(--section-color-two);
 }
 .help_wrapper {
-  width: 1280px;
+  width: 1200px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -454,6 +455,11 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  transition: all 0.4s ease-in-out;
+}
+.donation.card:hover {
+  cursor: pointer;
+  background-color: var(--button-color-hover);
 }
 .donation.card_icon {
   width: 30px;
@@ -478,7 +484,7 @@
 .footer {
   width: 100%;
   height: 350px;
-  background-color: var(--footer-background);
+  background: var(--footer-background);
 }
 .footer_wrapper {
   width: 1200px;
@@ -492,6 +498,7 @@
   justify-content: space-between;
   align-items: flex-start;
   margin-top: 56px;
+  background: transparent;
 }
 .footer.block.one {
   width: 278px;
@@ -529,4 +536,8 @@
   font-size: 20px;
   line-height: 115%;
   color: var(--text-footer);
+  transition: all 0.4s ease-in-out;
+}
+.footer.text:hover {
+  color: var(--button-color-hover);
 }/*# sourceMappingURL=style.css.map */
